2008-09-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #8996: htmlArea RTE: link to file not updated when changing case in file name
	* Fixed bug #9022: Link-Icon stays grey while trying to link an image in ie7

2008-09-08  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #9281: Fixed typing error

2008-09-07  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #9285: Remove all @ in front of file_exists() calls
	* Fixed bug #9301: Missing colorization in Localization Overview of the page tree, credits Steffen Kamper

2008-09-06  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9302: Make functions in tslib_eidtools public static

2008-09-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9262: Adding counting classes to table rows/columns in RTE (thanks to Thorsten Krohn)
	* Fixed bug #9296: htmlArea RTE: remove upload form when element browser is in readOnly mode

2008-09-04  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9227: Group field in Flexforms with a single table does not show selected items

2008-09-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9263: Default icon for plugins in list_type select (thanks to Steffen Kamper)

2008-09-03  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8491: Template Analyzer Module inconsistencies (thanks to Steffen Kamper)
	* Fixed bug #9193: Text "shortcut-icon" is untranslated (thanks to Christopher Stelmaszyk)

2008-09-03  Ingo Renner  <ingo@typo3.org>

	* Added feature #9281: Add a method to easily do a HTTP redirect
	* Declared t3lib_div::readLLPHPfile() and t3lib_div::removeXSS() static
	* Fixed bug: When there is no TypoScript template found the message "No template found!" is not obvious, does it mean a TS template or a HTML template?

2008-09-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9276: htmlArea RTE: allow wild cards in lists of allowed class names

2008-09-01  Stanislas Rolland  <typo3@sjbr.ca>
